--- a/evo_sale_inventory_report/views/sale_order.xml
+++ b/evo_sale_inventory_report/views/sale_order.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <search string="Sales Analysis">
             	<group expand="0" string="Group By">
+					<field name="name"/>
             		<filter string="Order" name="by_order" domain="[]"  context="{'group_by': 'order_id'}"/>
 				</group>
 			</search>
