evo_auto_invoice

--- a/evo_auto_invoice/views/account_payment_view.xml
+++ b/evo_auto_invoice/views/account_payment_view.xml
@@ -3,6 +3,7 @@
     <record id="view_account_payment_form_inherit" model="ir.ui.view">
         <field name="name">account.payment.form.view.inherit</field>
         <field name="model">account.payment</field>
+        <field name="priority">99</field>
         <field name="inherit_id" ref="account.view_account_payment_form" />
         <field name="arch" type="xml">
             <xpath expr="//sheet/group/group[4]" position="inside">
