--- a/evo_auto_invoice/views/sale_order_view.xml
+++ b/evo_auto_invoice/views/sale_order_view.xml
@@ -3,6 +3,7 @@
     <record id="sale_order_form_view_inherit" model="ir.ui.view">
         <field name="name">sale.order.form.view.inherit</field>
         <field name="model">sale.order</field>
+        <field name="priority">99</field>
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
             <xpath
@@ -25,9 +26,9 @@
                 />
             </xpath>
             <xpath expr="//header/button[8]" position="replace">
-        	</xpath>
+            </xpath>
             <xpath expr="//header/button[9]" position="replace">
-        	</xpath>
+            </xpath>
         </field>
     </record>
 </odoo>
